objects/CSS_WS_SRT_Masters_Catalog__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CSS_WS_Access_Code__c</fullName>
        <label>Access Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Engine_Family_Code__c</fullName>
        <label>Engine Family Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Group__c</fullName>
        <label>Group</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Procedure__c</fullName>
        <label>Procedure</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_SRT_Code__c</fullName>
        <label>SRT Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_SRT_Description__c</fullName>
        <label>SRT Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_SRT_Hrs__c</fullName>
        <label>SRT Hrs</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_SRT_Type__c</fullName>
        <label>SRT Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Service_Model_Name__c</fullName>
        <label>Service Model Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Step__c</fullName>
        <label>Step</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CSS WS SRT Masters Catalogues</label>
</CustomObject>